--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,10 +22,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "lib", "public/lib"]
+  "include": ["src", "lib", "public/lib", "pages/Dashboard.tsx"]
 }
