--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,5 +25,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "lib", "public/lib", "pages/Dashboard.tsx"]
+  "include": ["src", "lib", "public/lib", "pages/Dashboard/Dashboard.tsx"]
 }
